--- a/linearization.ipynb
+++ b/linearization.ipynb
@@ -18,13 +18,28 @@
     "\n",
     "where\n",
     "\n",
-    "$$x = \\begin{bmatrix} q_1 \\\\ q_2 \\end{bmatrix}$$\n",
-    "$$\\frac{dx}{dt} = \\begin{bmatrix} \\dot q_1 \\\\ \\dot q_2 \\end{bmatrix}$$\n",
-    "$$f(x) \n",
+    "$$x = \n",
+    "\\begin{bmatrix} \n",
+    "q_1 \\\\ \n",
+    "q_2 \n",
+    "\\end{bmatrix}$$\n",
+    "\n",
+    "$$\\frac{dx}{dt} = \n",
+    "\\begin{bmatrix}\n",
+    "\\dot q_1 \\\\\n",
+    "\\dot q_2 \n",
+    "\\end{bmatrix}$$\n",
+    "\n",
+    "$$f(x) = \n",
+    "\\begin{bmatrix} \n",
+    "\\dot q_1 \\\\ \n",
+    "\\dot q_2 \n",
+    "\\end{bmatrix}\n",
     "= \n",
-    "\\begin{bmatrix} \\dot q_1 \\\\ \\dot q_2 \\end{bmatrix}\n",
-    "= \n",
-    "\\begin{bmatrix} aq_1 - bq_1q_2 \\\\ bq_1q_2-cq_2 \\end{bmatrix}$$\n",
+    "\\begin{bmatrix}\n",
+    "aq_1 - bq_1q_2 \\\\ \n",
+    "bq_1q_2-cq_2 \n",
+    "\\end{bmatrix}$$\n",
     "\n",
     "Equilibrium points occur when our system does not change with time. This occurs when:\n",
     "$$\\dot q_1 = 0$$\n",
