--- a/linearization.ipynb
+++ b/linearization.ipynb
@@ -87,8 +87,8 @@
     "\\mathbf{\\frac{\\partial f_2}{\\partial q_2}}\n",
     "\\end{bmatrix}$$\n",
     "\n",
-    "Evaluated at Equilibrium Point 1:\n",
-    "> $$\\mathbf{A}\n",
+    "##### Evaluated at Equilibrium Point 1:\n",
+    "$$\\mathbf{A}\n",
     "=\n",
     "\\begin{bmatrix}\n",
     "a-bq_2 &\n",
@@ -110,8 +110,8 @@
     "$$\\lambda_2 = -c$$\n",
     "$$\\text{Since }\\lambda_1 \\text{is positive, the system is unstable around this equilibrium point.}$$\n",
     "\n",
-    "Evaluated at Equilibrium Point 2:\n",
-    "> $$A\n",
+    "##### Evaluated at Equilibrium Point 2:\n",
+    "$$\\mathbf{A}\n",
     "=\n",
     "\\begin{bmatrix}\n",
     "a-bq_2 &\n",
