--- a/linearization.ipynb
+++ b/linearization.ipynb
@@ -87,7 +87,7 @@
     "\\mathbf{\\frac{\\partial f_2}{\\partial q_2}}\n",
     "\\end{bmatrix}$$\n",
     "\n",
-    "##### Evaluated at Equilibrium Point 1:\n",
+    "#### Evaluate at Equilibrium Point 1:\n",
     "$$\\mathbf{A}\n",
     "=\n",
     "\\begin{bmatrix}\n",
@@ -95,20 +95,20 @@
     "-bq_1 \\\\\n",
     "bq_2 &\n",
     "bq_1-c\n",
-    "\\end{bmatrix}\n",
-    "\\Biggr|_{q_1=0 \\text{ , } q_2=0}$$\n",
+    "\\end{bmatrix}$$\n",
+    "At Equilibrium Point 1, $q_1 = 0$ and $q_2 = 0$.\n",
+    "\n",
     "$$\\mathbf{A}\n",
     "=\n",
     "\\begin{bmatrix}\n",
-    "a &\n",
-    "0 \\\\\n",
-    "0 &\n",
-    "-c\n",
+    "a & 0 \\\\\n",
+    "0 & -c\n",
     "\\end{bmatrix}$$\n",
+    "\n",
     "$$det(\\mathbf{A}-\\lambda I) = 0$$\n",
-    "$$\\lambda_1 = a { , }$$\n",
-    "$$\\lambda_2 = -c$$\n",
-    "$$\\text{Since }\\lambda_1 \\text{is positive, the system is unstable around this equilibrium point.}$$\n",
+    "\n",
+    "Therefore, $\\lambda_1 = a$ and $\\lambda_2 = -c$.\n",
+    "Since $\\lambda_1$ is positive, the system is unstable around this equilibrium point.\n",
     "\n",
     "##### Evaluated at Equilibrium Point 2:\n",
     "$$\\mathbf{A}\n",
@@ -118,9 +118,10 @@
     "-bq_1 \\\\\n",
     "bq_2 &\n",
     "bq_1-c\n",
-    "\\end{bmatrix}\n",
-    "\\Biggr|_{q_1=\\frac{c}{b} \\text{ , } q_2=\\frac{a}{b}}$$\n",
-    "$$A\n",
+    "\\end{bmatrix}$$\n",
+    "At Equilibrium Point 2, $q_1 = \\frac{c}{b}$ and $q_2 = \\frac{a}{b}$.\n",
+    "\n",
+    "$$\\mathbf{A}\n",
     "=\n",
     "\\begin{bmatrix}\n",
     "0 &\n",
@@ -128,11 +129,10 @@
     "a &\n",
     "0\n",
     "\\end{bmatrix}$$\n",
+    "\n",
     "$$det(\\mathbf{A}-\\lambda I) = 0$$\n",
-    "$$\\lambda_1 = +i\\sqrt{ac} { , }$$\n",
-    "$$\\lambda_2 = -i\\sqrt{ac}$$\n",
-    "$$\\text{Since } \\lambda_1 \\text{ and } \\lambda_2 \n",
-    "\\text{are complex conjugates, the system is marginally stable around this equilibrium point.}$$"
+    "\n",
+    "Therefore, $\\lambda_1 = +i\\sqrt{ac}$ and $\\lambda_2 = -i\\sqrt{ac}$. Since $\\lambda_1$ and $\\lambda_2$ are complex conjugates, the system is marginally stable around this equilibrium point."
    ]
   },
   {
