--- a/linearization.ipynb
+++ b/linearization.ipynb
@@ -87,23 +87,13 @@
     "\\mathbf{\\frac{\\partial f_2}{\\partial q_2}}\n",
     "\\end{bmatrix}$$\n",
     "\n",
-    "#### Evaluate at Equilibrium Point 1:\n",
-    "$$\\mathbf{A}\n",
-    "=\n",
-    "\\begin{bmatrix}\n",
-    "a-bq_2 &\n",
-    "-bq_1 \\\\\n",
-    "bq_2 &\n",
-    "bq_1-c\n",
-    "\\end{bmatrix}$$\n",
+    "##### Evaluated at Equilibrium Point 1:\n",
+    "\n",
+    "$$\\mathbf{A} = \\begin{bmatrix} a-bq_2 & -bq_1 \\\\ bq_2 & bq_1-c \\end{bmatrix}$$\n",
+    "\n",
     "At Equilibrium Point 1, $q_1 = 0$ and $q_2 = 0$.\n",
     "\n",
-    "$$\\mathbf{A}\n",
-    "=\n",
-    "\\begin{bmatrix}\n",
-    "a & 0 \\\\\n",
-    "0 & -c\n",
-    "\\end{bmatrix}$$\n",
+    "$$\\mathbf{A} = \\begin{bmatrix} a & 0 \\\\ 0 & -c \\end{bmatrix}$$\n",
     "\n",
     "$$det(\\mathbf{A}-\\lambda I) = 0$$\n",
     "\n",
@@ -111,24 +101,11 @@
     "Since $\\lambda_1$ is positive, the system is unstable around this equilibrium point.\n",
     "\n",
     "##### Evaluated at Equilibrium Point 2:\n",
-    "$$\\mathbf{A}\n",
-    "=\n",
-    "\\begin{bmatrix}\n",
-    "a-bq_2 &\n",
-    "-bq_1 \\\\\n",
-    "bq_2 &\n",
-    "bq_1-c\n",
-    "\\end{bmatrix}$$\n",
+    "$$\\mathbf{A} = \\begin{bmatrix} a-bq_2 & -bq_1 \\\\ bq_2 & bq_1-c \\end{bmatrix}$$\n",
+    "\n",
     "At Equilibrium Point 2, $q_1 = \\frac{c}{b}$ and $q_2 = \\frac{a}{b}$.\n",
     "\n",
-    "$$\\mathbf{A}\n",
-    "=\n",
-    "\\begin{bmatrix}\n",
-    "0 &\n",
-    "-c \\\\\n",
-    "a &\n",
-    "0\n",
-    "\\end{bmatrix}$$\n",
+    "$$\\mathbf{A} = \\begin{bmatrix} 0 & -c \\\\ a & 0 \\end{bmatrix}$$\n",
     "\n",
     "$$det(\\mathbf{A}-\\lambda I) = 0$$\n",
     "\n",
