--- a/linearization/linearization.ipynb
+++ b/linearization/linearization.ipynb
@@ -4,14 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"linearization1.png\">"
+    "<img src=\"docs/linearization1.png\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"linearization2.png\">"
+    "<img src=\"docs/linearization2.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"docs/linearization3.png\">"
    ]
   },
   {
@@ -90,15 +97,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"simulation.png\">"
+    "<img src=\"docs/simulation.png\">"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
