--- a/linearization/docs/linearization.tex
+++ b/linearization/docs/linearization.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt]{article}
 \usepackage{fullpage,enumitem,amsmath,amssymb,graphicx,grffile,float,listings}
-
+% \usepackage[a4paper,left=3cm,width=13cm,right=4cm]{geometry}
+\usepackage[top=0.25in, left=0.8in, bottom=0.625in, right=0.8in]{geometry}
 
 
 \begin{document}
