--- a/linearization/linearization.ipynb
+++ b/linearization/linearization.ipynb
@@ -103,9 +103,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (data-science)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "data-science"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -121,5 +121,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
